--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,7 +25,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Cliente.jar
+dist.jar=${dist.dir}/ComputacaoDistribuidaCliente.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.Cliente-src=src
